# DNSManagement

./: .dockerignore  .env  .gitignore  README.md  main.py  pyproject.toml
app/: config.py  database.py  models.py  schemas.py
app/api/: auth.py  certificates.py  ddns.py  domains.py  providers.py
app/config/: __init__.py  certificate_config.py  settings.py
app/providers/: __init__.py  aliyun.py  base.py  cloudflare.py  huawei.py  tencent.py
app/services/: certificate_service.py  ddns_service.py  scheduler_service.py  sync_service.py
docker/: .dockerignore  Dockerfile  README.md  build.sh  docker-compose-test.yaml  docker-compose.yml
scripts/: __init__.py  dns_auth_hook.py
static/: certificates.html  dashboard.html  ddns.html  domains.html  index.html  login.html  providers.html
static/css/: certificates.css  dashboard.css  ddns.css  domains.css  main.css  providers.css
static/js/: app.js  certificates.js  dashboard.js  ddns.js  domains.js  providers.js
static/js/components/: modal.js  sidebar.js
